tests/ui/consts/ct-var-in-collect_all_mismatches.stderr
error[E0277]: the trait bound `T: Bar<N>` is not satisfied
  --> $DIR/ct-var-in-collect_all_mismatches.rs:9:14
   |
LL |         self.unsatisfied()
   |              ^^^^^^^^^^^ the trait `Bar<N>` is not implemented for `T`
   |
note: required by a bound in `Foo::<T, N>::unsatisfied`
  --> $DIR/ct-var-in-collect_all_mismatches.rs:15:12
   |
LL |     fn unsatisfied(self)
   |        ----------- required by a bound in this associated function
LL |     where
LL |         T: Bar<N>,
   |            ^^^^^^ required by this bound in `Foo::<T, N>::unsatisfied`
help: consider restricting type parameter `T`
   |
LL | impl<T: Bar<N>, const N: usize> Foo<T, N> {
   |       ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
